--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,25 +11,6 @@
       "contexts/*": ["src/contexts/*"],
       "src/*": ["src/*"],
     },
-    "plugins": [
-      {
-        "name": "typescript-styled-plugin",
-        "lint": {
-          "validProperties": [
-            "shadow-color",
-            "shadow-opacity",
-            "shadow-offset",
-            "shadow-radius",
-            "padding-horizontal",
-            "padding-vertical",
-            "margin-vertical",
-            "margin-horizontal",
-            "tint-color",
-            "aspect-ratio",
-            "elevation"
-          ]
-        }
-      }
-    ]
+    "allowSyntheticDefaultImports": true
   }
 }
