--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-webview": "^11.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -23,7 +24,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
-    "@types/react": "^18.0.21",
+    "@types/react": "^18.0.25",
     "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
